# tpDcc-libs-plugin

./: .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
tests/: test_general.py
tpDcc/libs/plugin/: __init__.py  __logging__.ini  __version__.py  _version.py
tpDcc/libs/plugin/core/: consts.py  factory.py
