[metadata]
name = tpDcc-libs-plugin
description = Library that contains classes to implement plugin architecture in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpDcc/tpDcc-libs-plugin

[options]
zip_safe = False
include_package_data = true
packages=find:

[options.extras_require]
dev = wheel

test = pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpDcc/libs/plugin/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =